Archive2/81/9d0cadaa87327c/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:17:10: error: function 'Foo& Foo::operator=(Foo&&)' defaulted on its first declaration with an exception-specification that differs from the implicit declaration 'Foo& Foo::operator=(Foo&&)'
     Foo& operator = (Foo&&) noexcept = default;
          ^
